[gd_scene load_steps=2 format=3 uid="uid://bwc2k8f4q6xmn"]

[ext_resource type="Script" path="res://scenes/ui/recruitment_terminal.gd" id="1_script"]

[node name="RecruitmentTerminal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 30.0
offset_right = -50.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="ModeLabel" type="Label" parent="Panel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "> ADS <    APPLICANTS"

[node name="MoneyLabel" type="Label" parent="Panel/VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Balance: $1000"
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="ContentScroll" type="ScrollContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ContentContainer" type="VBoxContainer" parent="Panel/VBox/ContentScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="HSeparator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="InfoPanel" type="PanelContainer" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="InfoLabel" type="Label" parent="Panel/VBox/InfoPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Select an item to view details"
vertical_alignment = 1

[node name="ControlsLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "[Left/Right] Switch Tab  [Up/Down] Navigate  [Enter] Select  [Q] Close"
horizontal_alignment = 1
